--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+/***Globales****/
+.contenedor{
+    max-width: 1200px;
+    margin: 0 auto;
+}
 /* Header */
 .site-header.inicio{
     background-image: url(../img/header.jpg);
@@ -5,4 +10,23 @@
     background-size: cover;
     height: 100vh;
     min-height: 600px;
+}
+.barra {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-top: 30px;
+}
+/** Navegacion **/
+.navegacion a {
+    color: #ffffff;
+    text-decoration: none;
+    font-size: 18px;
+    margin-right: 20px;
+}
+.navegacion a:hover {
+    color: #71b100;
+}
+.navegacion a:last-of-type{
+    margin: 0;
 }
