--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,27 @@
+
 /***Globales****/
+html{
+    font-size: 62.5%; /**Reset REM**/
+}
+body{
+    font-family: 'Lato', sans-serif;
+    font-size: 1.6rem;
+}
 .contenedor{
-    max-width: 1200px;
+    max-width: 120rem;
     margin: 0 auto;
+}
+h1 {
+    font-size: 3.8rem;
+}
+h2{
+    font-size: 3.4rem;
+}
+h3 {
+    font-size: 3rem;
+}
+h4 {
+    font-size: 2.6rem;
 }
 /* Header */
 .site-header.inicio{
@@ -9,20 +29,32 @@
     background-position: center center;
     background-size: cover;
     height: 100vh;
-    min-height: 600px;
+    min-height: 60rem;
+}
+.contenido-header {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.contenido-header h1{
+    color: #ffffff;
+    padding-bottom: 2rem;
+    max-width: 60rem;
+    line-height: 2rem;
 }
 .barra {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 30px;
+    padding-top: 3rem;
 }
 /** Navegacion **/
 .navegacion a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 18px;
-    margin-right: 20px;
+    font-size: 1.8rem;
+    margin-right: 2rem;
 }
 .navegacion a:hover {
     color: #71b100;
