--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,11 @@ h3 {
 h4 {
     font-size: 2.6rem;
 }
+/** Utilidades **/
+.seccion {
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
 /* Header */
 .site-header.inicio{
     background-image: url(../img/header.jpg);
@@ -41,7 +46,7 @@ h4 {
     color: #ffffff;
     padding-bottom: 2rem;
     max-width: 60rem;
-    line-height: 2rem;
+    line-height: 6rem;
 }
 .barra {
     display: flex;
@@ -61,4 +66,12 @@ h4 {
 }
 .navegacion a:last-of-type{
     margin: 0;
+}
+/** Iconos Nosotros **/
+.iconos-nosotros {
+    display: flex;
+    justify-content: space-between;
+}
+.icono {
+    flex-basis: calc(33.3% - 1rem);
 }
