--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
 
 /***Globales****/
+img {
+    max-width: 100%;
+}
 html{
     font-size: 62.5%; /**Reset REM**/
 }
 body{
     font-family: 'Lato', sans-serif;
     font-size: 1.6rem;
+    line-height: 2;
 }
 .contenedor{
     max-width: 120rem;
@@ -27,6 +31,12 @@ h4 {
 .seccion {
     margin-top: 2rem;
     margin-bottom: 2rem;
+}
+.fw-300 {
+    font-weight: 300;
+}
+.centrar-texto{
+    text-align: center;
 }
 /* Header */
 .site-header.inicio{
@@ -74,4 +84,25 @@ h4 {
 }
 .icono {
     flex-basis: calc(33.3% - 1rem);
+    text-align: center;
+}
+.icono h3{
+    text-transform: uppercase;
+}
+/*** Anuncios ****/
+.contenedor-anuncios{
+    display: flex;
+    justify-content: space-between;
+}
+.anuncio {
+    flex-basis: calc(33.3% - 1rem);
+    border: 1px solid #b5b5b5;
+    background-color: #f5f5f5;
+}
+.contenido-anuncio {
+    padding: 2rem;
+}
+.contenido-anuncio h3,
+.contenido-anuncio p {
+    margin: 0;
 }
