--- a/css/styles.css
+++ b/css/styles.css
@@ -171,10 +171,12 @@ h4 {
     justify-content: space-between;    
 }
 .seccion-inferior .blog {
-    flex-basis: 60%;
+    flex-basis: 59%;
+    border: 2px solid black;
 }
 .seccion-inferior .testimoniales {
-    flex-basis: calc(40% - 2rem);
+    flex-basis: calc(39% - 2rem);
+    border: 2px solid black;
 }
 .entrada-blog {
     display: flex;
@@ -205,4 +207,31 @@ h4 {
     height: .5rem;
     background-color: #71b100;
     margin-top: 1rem;
-}  
+} 
+.texto-entrada span {
+    color: #e08709;
+}
+/*** Testimoniales ***/
+.testimonial {
+    background-color: #71b100;
+    font-size: 2.4rem;
+    padding: 2rem;
+    color: #ffffff;
+    border-radius: 2rem;
+    width: auto;
+}
+.testimonial p {
+    text-align: right;
+}
+.testimonial blockquote::before {
+    content: '';
+    background-image: url(../img/comilla.svg);
+    width: 4rem;
+    height: 4rem;
+    position: absolute;
+    left: -2rem;
+}
+.testimonial blockquote{
+    position: relative;
+    padding-left: 5rem;
+}
