se corrigio testimoniales y se creo la pagina de nostros

--- a/css/styles.css
+++ b/css/styles.css
@@ -39,7 +39,7 @@ h4 {
     text-align: center;
 }
 .d-block {
-    display: block !important;
+    display: block!important;
 }
 /** Botones **/
 .boton{
@@ -61,6 +61,10 @@ h4 {
     display: block;
 }
 /* Header */
+.site-header {
+    background-color: #333333;
+    padding: 1rem 0 3rem 0;
+}
 .site-header.inicio{
     background-image: url(../img/header.jpg);
     background-position: center center;
@@ -170,13 +174,13 @@ h4 {
     display: flex;
     justify-content: space-between;    
 }
-.seccion-inferior.blog {
+.seccion-inferior .blog {
     flex-basis: 59%;
-    border: 2px solid black;
+    
 }
-.seccion-inferior.testimoniales {
+.seccion-inferior .testimoniales {
     flex-basis: calc(39% - 2rem);
-    border: 2px solid black;
+    
 }
 .entrada-blog {
     display: flex;
@@ -190,7 +194,7 @@ h4 {
     flex-basis: 40%;
 }
 .entrada-blog .texto-entrada {
-    flex-basis: calc(60% - 3rem);
+    flex-basis: calc(50% - 3rem);
 }
 .texto-entrada a {
     color: #081008;
@@ -234,4 +238,31 @@ h4 {
 .testimonial blockquote{
     position: relative;
     padding-left: 5rem;
+    font-weight: 300;
+}
+/*** Footer ***/
+.site-footer {
+    background-color: #333333;
+    margin: 0;
+}
+.contenedor-footer {
+    padding: 3rem 0;
+    display: flex;
+    justify-content: space-between;
+}
+.copyrigth {
+    margin:0;
+    color: #ffffff;
+}
+/***Internas****/
+.contenido-nosotros {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 2rem;
+}
+.texto-nosotros blockquote {
+    font-weight: 900;
+    font-size: 2rem;
+    margin: 0;
+    padding: 0 0 3rem 0;
 }
