--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,9 @@ h4 {
 .d-block {
     display: block!important;
 }
+.contenido-centrado {
+    max-width: 800px;
+}
 /** Botones **/
 .boton{
     color: #ffffff;
@@ -119,11 +122,14 @@ h4 {
 .contenedor-anuncios{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
-.anuncio {
+.anuncios {
+    flex-shrink: 0;
     flex-basis: calc(33.3% - 1rem);
     border: 1px solid #b5b5b5;
     background-color: #f5f5f5;
+    margin-bottom: 2rem;
 }
 .contenido-anuncio {
     padding: 2rem;
@@ -141,6 +147,8 @@ h4 {
     padding: 0;
     display: flex; 
     justify-content: space-evenly;
+    flex: 1;
+    max-width: 500px;
 } 
 .iconos-caracteristicas li {
     /* flex: 1; */
@@ -255,6 +263,7 @@ h4 {
     color: #ffffff;
 }
 /***Internas****/
+/*Nosotros*/
 .contenido-nosotros {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -265,4 +274,10 @@ h4 {
     font-size: 2rem;
     margin: 0;
     padding: 0 0 3rem 0;
+}
+/*Anuncio*/
+.resumen-propiedad {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
