--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body{
     line-height: 2;
 }
 .contenedor{
+    width: 95%;
     max-width: 120rem;
     margin: 0 auto;
 }
@@ -55,6 +56,14 @@ h4 {
     display: inline-block;
     text-align: center;
     border: none;
+    display: block;
+    flex: 0 0 100%;
+}
+@media (min-width: 768px) {
+    .boton {
+        display: inline-block;
+        flex: 0 0 auto;
+    }
 }
 .boton:hover {
     cursor: pointer;
@@ -84,6 +93,12 @@ h4 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
+}
+@media (min-width: 768px) {
+    .contenido-header {
+        text-align: left;
+    }
 }
 .contenido-header h1{
     color: #ffffff;
@@ -92,48 +107,90 @@ h4 {
     line-height: 6rem;
 }
 .barra {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     padding-top: 3rem;
+}
+@media (min-width: 768px) {
+    .barra {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 /** Navegacion **/
 .navegacion a {
     color: #ffffff;
     text-decoration: none;
-    font-size: 1.8rem;
-    margin-right: 2rem;
+    font-size: 2.2rem;    
+    display: block;
+}
+@media (min-width: 768px) {
+    .navegacion a {
+        display: inline-block;
+        margin-right: 2rem;
+        font-size: 1.8rem;
+    }
+    .navegacion a:last-of-type{
+        margin: 0;
+    }
 }
 .navegacion a:hover {
     color: #71b100;
 }
-.navegacion a:last-of-type{
-    margin: 0;
+/** Mobile Menu **/
+.mobile-menu img {
+    width: 5rem;
 }
+@media (min-width: 768px) {
+    .mobile-menu {
+        display: none;
+    }
+}
+.navegacion:target {
+    display: block;
+}
+.navegacion {
+    display: none;
+}
+@media (min-width: 768px) {
+    .navegacion{
+        display: block;
+    }
+}
+
 /** Iconos Nosotros **/
-.iconos-nosotros {
-    display: flex;
-    justify-content: space-between;
+@media (min-width: 768px) {
+    .iconos-nosotros {
+        display: flex;
+        justify-content: space-between;
+    }
 }
-.icono {
-    flex-basis: calc(33.3% - 1rem);
+.icono {    
     text-align: center;
+}
+@media (min-width: 768) {
+    flex-basis: calc(33.3% - 1rem);
 }
 .icono h3{
     text-transform: uppercase;
 }
 /*** Anuncios ****/
-.contenedor-anuncios{
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+@media (min-width: 768px) {
+    .contenedor-anuncios{
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
 }
 .anuncios {
-    flex-shrink: 0;
-    flex-basis: calc(33.3% - 1rem);
+    flex-shrink: 0;    
     border: 1px solid #b5b5b5;
     background-color: #f5f5f5;
     margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .anuncios {
+        flex-basis: calc(33.3% - 1rem);
+    }
 }
 .contenido-anuncio {
     padding: 2rem;
@@ -175,38 +232,46 @@ h4 {
     align-items: center;
 }
 .contenido-contacto {
-    flex: 1;
+    flex: 0 0 95%;
     color: #ffffff;
 }
 .contenido-contacto p {
     font-size: 1.8rem;
 }
 /** Seccion Inferior **/
-.seccion-inferior {
-    display: flex;
-    justify-content: space-between;    
+@media (min-width: ) {
+    .seccion-inferior {
+        display: flex;
+        justify-content: space-between;    
+    }
+    .seccion-inferior .blog {
+        flex-basis: 59%;
+        
+    }
+    .seccion-inferior .testimoniales {
+        flex-basis: calc(39% - 2rem);
+        
+    }
 }
-.seccion-inferior .blog {
-    flex-basis: 59%;
-    
-}
-.seccion-inferior .testimoniales {
-    flex-basis: calc(39% - 2rem);
-    
-}
-.entrada-blog {
-    display: flex;
-    justify-content: space-between;
+.entrada-blog {    
     margin-bottom: 2rem;
+}
+@media (min-width: 768px) {
+    .entrada-blog {
+        display: flex;
+        justify-content: space-between;
+    }
 }
 .entrada-blog:last-of-type{
     margin-bottom: 0;
 }
-.entrada-blog .imagen {
-    flex-basis: 40%;
-}
-.entrada-blog .texto-entrada {
-    flex-basis: calc(50% - 3rem);
+@media (min-width: 768px) {
+    .entrada-blog .imagen {
+        flex-basis: 40%;
+    }
+    .entrada-blog .texto-entrada {
+        flex-basis: calc(50% - 3rem);
+    }
 }
 .texto-entrada a {
     color: #081008;
@@ -259,8 +324,21 @@ h4 {
 }
 .contenedor-footer {
     padding: 3rem 0;
-    display: flex;
-    justify-content: space-between;
+    text-align: center;    
+}
+@media (min-width: 768px) {
+    .contenedor-footer {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.site-footer nav {
+    display: none;
+}
+@media (min-width: 768px) {
+    .site-footer nav {
+        display: block;
+    }
 }
 .copyrigth {
     margin:0;
@@ -268,10 +346,12 @@ h4 {
 }
 /***Internas****/
 /*Nosotros*/
-.contenido-nosotros {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-column-gap: 2rem;
+@media (min-width: ) {
+    .contenido-nosotros {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-column-gap: 2rem;
+    }
 }
 .texto-nosotros blockquote {
     font-weight: 900;
